--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,32 +1,107 @@
 $black-color: #333;
 $max-width: 1280px;
 $min-width: 400px;
+$hero-img-url: 'https://api.fnkr.net/testimg/1280x500/00CED1/FFF/?text=hero+img';
+* {
+  // border: 1px solid black;
+}
 
 * {
-	border: 1px solid black;
+  box-sizing: border-box;
+  vertical-align: middle;
+  color: $black-color;
 }
 
-* {
-	box-sizing: border-box;
-	vertical-align: middle;
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-}
 .container {
-	max-width: $max-width;
-	min-width: $min-width;
-	width: 80%;
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
+  max-width: $max-width;
+  min-width: $min-width;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#hero-img {
+  background-image: url($hero-img-url);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 400px;
+  widows: 100%;
+  display: block;
+}
+
+#well-living-map {
+  width: 100%;
+  height: 400px;
+}
+
+.responsive-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  li {
+    width: calc(100% / 3);
+    min-width: $min-width;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    padding: 20px;
+    h2 {
+      font-size: 1.2em;
+    }
+    h3 {
+      font-size: 1em;
+      opacity: 0.75;
+      margin: 0px;
+    }
+    p {
+      font-size: 0.9em;
+    }
+  }
+}
+
+.sep {
+  width: 100%;
+  margin: 0;
+  margin-top: -20px;
+  text-align: center;
+  padding: 8px;
+  border-top: 1px solid rgba($black-color, 0.5);
+  border-bottom: 1px solid rgba($black-color, 0.5);
+  border-radius: 15px;
+}
+
+section {
+  margin-bottom: 100px;
 }
 
 h1 {
-  background-color: $black-color;
-  color: white;
+  font-size: 1.6em;
+}
+
+p {
+  font-size: 1.2em;
+  line-height: 1.7em;
+  letter-spacing: 1px;
+  text-align: justify;
+  margin: 0;
+  // text-indent: 2em;
+  margin-bottom: 1em;
+}
+
+li {
+  font-size: 1.2em;
+  line-height: 1.7em;
 }
