--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,6 +2,9 @@ $black-color: #333;
 $max-width: 1280px;
 $min-width: 400px;
 $hero-img-url: 'https://api.fnkr.net/testimg/1280x500/00CED1/FFF/?text=hero+img';
+$soil-img-url: 'https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=two';
+$mount-img-url: 'https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=mountain';
+$slip-img-url: 'https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=hwa';
 * {
   // border: 1px solid black;
 }
@@ -36,12 +39,30 @@ body {
   background-position: center;
   height: 400px;
   widows: 100%;
-  display: block;
 }
 
 #well-living-map {
   width: 100%;
   height: 400px;
+}
+
+#soil-pic {
+  background-image: url($soil-img-url);
+}
+
+#mount-pic {
+  background-image: url($mount-img-url);
+}
+
+#slip-pic {
+  background-image: url($slip-img-url);
+}
+
+.pic {
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100px;
+  width: 100%;
 }
 
 .responsive-list {
